# swagger_server/controllers/games_search.py
@@ -1,0 +1,16 @@
+import pymongo
+
+def search_game_title(title):
+    pass
+
+def search_game_genre(genre):
+    pass
+
+def search_game_date(date):
+    pass
+
+def search_game_date_range(date_range):
+    pass
+
+def search_game_publisher(publisher):
+    pass
